update packaging files

--- a/debian/dkms.conf
+++ b/debian/dkms.conf
@@ -1,7 +1,7 @@
 PACKAGE_NAME="hinic"
 PACKAGE_VERSION="#MODULE_VERSION#"
-MAKE[0]="./build $kernel_source_dir modules"
-CLEAN="./build $kernel_source_dir clean"
+MAKE[0]="./dkms_build $kernel_source_dir modules"
+CLEAN="./dkms_build $kernel_source_dir clean"
 BUILT_MODULE_NAME[0]="hinic"
 DEST_MODULE_LOCATION[0]="/kernel/drivers/net/ethernet/huawei/hinic"
 AUTOINSTALL="yes"
