--- a/.github/workflows/build_check.yaml
+++ b/.github/workflows/build_check.yaml
@@ -159,3 +159,21 @@ jobs:
         if: always()
         run: |
           docker kill -s TERM builder || true
+
+  create-release:
+    needs: [build-kmod, build-deb]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/debian/')
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: hinic-dkms
+          path: hinic-dkms
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            hinic-dkms/*
