build_check: add 6.18

--- a/.github/workflows/build_check.yaml
+++ b/.github/workflows/build_check.yaml
@@ -9,6 +9,9 @@ jobs:
       fail-fast: false
       matrix:
         kernel:
+          - version: "v6.18"
+            patches: ""
+            assert_have_all: true
           - version: "v6.12"
             patches: ""
             assert_have_all: true
