--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,7 @@
 Source: hinic
 Section: kernel
 Maintainer: Miao Wang <shankerwangmiao@gmail.com>
+Uploaders: Shengqi Chen <harry@debian.org>
 Build-Depends: debhelper-compat (= 13), dh-sequence-dkms
 Standards-Version: 4.7.3
 Homepage: https://gitee.com/openeuler/kernel/tree/OLK-6.6/drivers/net/ethernet/huawei/hinic
