d/control: rename src package to hinic-dkms
Signed-off-by: Shengqi Chen <harry@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: hinic
+Source: hinic-dkms
 Section: kernel
 Maintainer: Miao Wang <shankerwangmiao@gmail.com>
 Uploaders: Shengqi Chen <harry@debian.org>
